--- a/hello.html
+++ b/hello.html
@@ -2,8 +2,17 @@
 <html>
   <head>
     <title>Git & Github</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap" rel="stylesheet">
+    <style>
+      body{
+        font-family: 'Jetbrains Mono';
+      }
+    </style>
   </head>
   <body>
+    <h1>Welcome to my website!</h1>
     Hello, world!
   </body>
 </html>
